[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
install_requires =
    ensure == 1.0.2
    py-youtube == 1.1.7
python_requires = >= 3.7

[options.extras_require]
testing = 
    pytest>=7.2.0
    mypy>=0.991
    flake8>=6.0.0
    tox>=4.0.7
    black>=22.12.0

[options.package_data]
IPYNBRenderer = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py
